eliminate logging from progress tracker interface